sample/error/eval_nd-member_idx.bfr
codegen [
  $build {
    a: array(3) {}
  } in
  + a@idx
]